fix: Fix JVM argument formatting for Hotswap Agent
Changed --add-opens arguments from space-separated to equals syntax
to prevent them from being incorrectly split into separate arguments.
This fixes the ClassNotFoundException error when launching with Hotswap.

Updated:
- HotswapAgentManager: Use --add-opens=module/package=ALL-UNNAMED format
- HotswapLaunchConfigurationDelegate: Updated containsArgument to handle new format

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>